pruebaPackage/objects/SDX_Direccion__c.object
<CustomObject>
    <label>Dirección</label>
    <nameField>
        <label>Nombre de Dirección</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Direcciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Calle__c</fullName>
        <label>Calle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo__c</fullName>
        <label>Cargo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cuenta__c</fullName>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Direcciones</relationshipLabel>
        <relationshipName>Direcciones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Distrito__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distrito</label>
        <referenceTo>Distrito__c</referenceTo>
        <relationshipLabel>Direcciones</relationshipLabel>
        <relationshipName>Direcciones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Principal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDX_Correo_electronico__c</fullName>
        <label>Correo electrónico</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SDX_Departamento__c</fullName>
        <label>Departamento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SDXDepartamento</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Dpto_Oficina__c</fullName>
        <label>Dpto/Oficina</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDX_Nombre_encargado__c</fullName>
        <label>Nombre encargado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDX_Numero__c</fullName>
        <label>Número</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDX_Provincia__c</fullName>
        <label>Provincia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SDXProvincia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Telefono_fijo__c</fullName>
        <label>Teléfono fijo</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SDX_Telefono_movil__c</fullName>
        <label>Teléfono móvil</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SDX_Tipo__c</fullName>
        <label>Tipo</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Facturación</fullName>
                </value>
                <value>
                    <fullName>Envío</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Imprimible</fullName>
                </value>
                <value>
                    <fullName>Punto de Consumo</fullName>
                </value>
                <value>
                    <fullName>Punto de Entrega</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>